# buscaluso

./: Cargo.toml  README.md
buscaluso/: Cargo.toml
buscaluso-bench/: Cargo.toml
buscaluso-bench/src/: main.rs
buscaluso/src/: fon.rs  lib.rs
config/: luso.bench  luso.rules
src/: bench.rs  fon.rs  lib.rs  main.rs  normalize.rs  rulefile.rs  rules.rs  tests.rs
src/fon/: tests.rs
src/normalize/: tests.rs
src/rulefile/: tests.rs
src/rules/: tests.rs
tests/: mutation_rules.rs
